# airsim_controller

./: .gitignore  CMakeLists.txt  README.md
airsim_setting_files/: drone_1cam_lidar16.json
airsim_setting_files/drone/: drone_1cam_lidar16.json  drone_4cam.json
airsim_setting_files/drone_without_kinematics/: drone_1cam.json
config/: drone_random_flight.json  drone_random_pose.json
docker/: Dockerfile  build.sh  interact.sh  run.sh
nvidia_docker1/: Dockerfile  run.sh
setting_files/: 5cam.json  car.json  cv.json  drone_1cam.json  drone_1cam_lidar16.json  drone_1cam_lidar32.json  drone_4cam.json  drone_4cam_lidar32.json  drone_5cam.json
src/: drone_random_flight.cpp  drone_random_flight_updown.cpp  drone_random_pose.cpp  drone_set_pose.cpp  drone_waypoint_flight.cpp  drone_waypoint_flight_withnoise.cpp  hello_drone.cpp  save_lidar_data.cpp  test_cnpy.cpp  test_drone.cpp  visualize_lidar_data.cpp
